Add pickup_ts column for compatilibility with feature store

--- a/notebooks/14_inference_pipeline.ipynb
+++ b/notebooks/14_inference_pipeline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -21,14 +21,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "current_date=Timestamp('2025-04-14 03:00:00')\n"
+      "current_date=Timestamp('2025-04-18 04:00:00')\n"
      ]
     },
     {
@@ -49,24 +49,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-04-13 23:49:16,104 INFO: Closing external client and cleaning up certificates.\n",
+      "2025-04-18 00:23:38,203 INFO: Closing external client and cleaning up certificates.\n",
       "Connection closed.\n",
-      "2025-04-13 23:49:16,108 INFO: Initializing external client\n",
-      "2025-04-13 23:49:16,109 INFO: Base URL: https://c.app.hopsworks.ai:443\n"
+      "2025-04-18 00:23:38,206 INFO: Initializing external client\n",
+      "2025-04-18 00:23:38,207 INFO: Base URL: https://c.app.hopsworks.ai:443\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "InsecureRequestWarning: Unverified HTTPS request is being made to host 'c.app.hopsworks.ai'. Adding certificate verification is strongly advised. See: https://urllib3.readthedocs.io/en/latest/advanced-usage.html#tls-warnings\n",
       "\n",
       "\n",
       "UserWarning: The installed hopsworks client version 4.1.5 may not be compatible with the connected Hopsworks backend version 4.2.0. \n",
@@ -77,11 +76,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-04-13 23:49:16,624 INFO: Python Engine initialized.\n",
+      "2025-04-18 00:23:39,114 INFO: Python Engine initialized.\n",
       "\n",
       "Logged in to project, explore it here https://c.app.hopsworks.ai:443/p/1211558\n",
-      "Fetching data from 2025-03-17 03:00:00 to 2025-04-14 02:00:00\n",
-      "Finished: Reading data from Hopsworks, using Hopsworks Feature Query Service (10.36s) \n"
+      "2025-04-18 00:23:40,557 INFO: Feature view already exists, skipping creation.\n",
+      "2025-04-18 00:23:40,558 INFO: Closing external client and cleaning up certificates.\n",
+      "Connection closed.\n",
+      "2025-04-18 00:23:40,560 INFO: Initializing external client\n",
+      "2025-04-18 00:23:40,560 INFO: Base URL: https://c.app.hopsworks.ai:443\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2025-04-18 00:23:41,128 INFO: Python Engine initialized.\n",
+      "\n",
+      "Logged in to project, explore it here https://c.app.hopsworks.ai:443/p/1211558\n",
+      "Fetching data from 2025-03-21 04:00:00 to 2025-04-18 03:00:00\n",
+      "Finished: Reading data from Hopsworks, using Hopsworks Feature Query Service (10.47s) \n"
      ]
     }
    ],
@@ -93,24 +114,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-04-13 23:49:29,883 INFO: Closing external client and cleaning up certificates.\n",
+      "2025-04-18 00:24:06,932 INFO: Closing external client and cleaning up certificates.\n",
       "Connection closed.\n",
-      "2025-04-13 23:49:29,887 INFO: Initializing external client\n",
-      "2025-04-13 23:49:29,887 INFO: Base URL: https://c.app.hopsworks.ai:443\n"
+      "2025-04-18 00:24:06,936 INFO: Initializing external client\n",
+      "2025-04-18 00:24:06,936 INFO: Base URL: https://c.app.hopsworks.ai:443\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "InsecureRequestWarning: Unverified HTTPS request is being made to host 'c.app.hopsworks.ai'. Adding certificate verification is strongly advised. See: https://urllib3.readthedocs.io/en/latest/advanced-usage.html#tls-warnings\n",
       "\n",
       "\n",
       "UserWarning: The installed hopsworks client version 4.1.5 may not be compatible with the connected Hopsworks backend version 4.2.0. \n",
@@ -121,23 +141,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-04-13 23:49:30,411 INFO: Python Engine initialized.\n",
+      "2025-04-18 00:24:22,262 INFO: Python Engine initialized.\n",
       "\n",
       "Logged in to project, explore it here https://c.app.hopsworks.ai:443/p/1211558\n",
       "[LightGBM] [Warning] feature_fraction is set=0.7167492637678337, colsample_bytree=1.0 will be ignored. Current value: feature_fraction=0.7167492637678337\n",
       "[LightGBM] [Warning] bagging_fraction is set=0.4029105817023335, subsample=1.0 will be ignored. Current value: bagging_fraction=0.4029105817023335\n",
       "     pickup_location_id  predicted_demand\n",
-      "0                     1              14.0\n",
-      "1                     2              12.0\n",
-      "2                     3              14.0\n",
-      "3                     4              11.0\n",
-      "4                     5              12.0\n",
+      "0                     1              15.0\n",
+      "1                     2              13.0\n",
+      "2                     3              16.0\n",
+      "3                     4              13.0\n",
+      "4                     5              13.0\n",
       "..                  ...               ...\n",
-      "260                 261              11.0\n",
-      "261                 262              12.0\n",
-      "262                 263              10.0\n",
-      "263                 264              11.0\n",
-      "264                 265              10.0\n",
+      "260                 261              17.0\n",
+      "261                 262              15.0\n",
+      "262                 263              13.0\n",
+      "263                 264              15.0\n",
+      "264                 265              14.0\n",
       "\n",
       "[265 rows x 2 columns]\n"
      ]
@@ -156,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -183,41 +203,48 @@
        "      <th>pickup_location_id</th>\n",
        "      <th>predicted_demand</th>\n",
        "      <th>pickup_hour</th>\n",
+       "      <th>pickup_ts</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>2025-04-14 03:00:00</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>2025-04-18 04:00:00</td>\n",
+       "      <td>1744948800000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>2025-04-14 03:00:00</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>2025-04-18 04:00:00</td>\n",
+       "      <td>1744948800000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>2025-04-14 03:00:00</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>2025-04-18 04:00:00</td>\n",
+       "      <td>1744948800000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>4</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>2025-04-14 03:00:00</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>2025-04-18 04:00:00</td>\n",
+       "      <td>1744948800000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>5</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>2025-04-14 03:00:00</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>2025-04-18 04:00:00</td>\n",
+       "      <td>1744948800000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -225,62 +252,70 @@
        "    <tr>\n",
        "      <th>260</th>\n",
        "      <td>261</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>2025-04-14 03:00:00</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>2025-04-18 04:00:00</td>\n",
+       "      <td>1744948800000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>261</th>\n",
        "      <td>262</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>2025-04-14 03:00:00</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>2025-04-18 04:00:00</td>\n",
+       "      <td>1744948800000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>262</th>\n",
        "      <td>263</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>2025-04-14 03:00:00</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>2025-04-18 04:00:00</td>\n",
+       "      <td>1744948800000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>263</th>\n",
        "      <td>264</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>2025-04-14 03:00:00</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>2025-04-18 04:00:00</td>\n",
+       "      <td>1744948800000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>264</th>\n",
        "      <td>265</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>2025-04-14 03:00:00</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>2025-04-18 04:00:00</td>\n",
+       "      <td>1744948800000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>265 rows × 3 columns</p>\n",
+       "<p>265 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     pickup_location_id  predicted_demand         pickup_hour\n",
-       "0                     1              14.0 2025-04-14 03:00:00\n",
-       "1                     2              12.0 2025-04-14 03:00:00\n",
-       "2                     3              14.0 2025-04-14 03:00:00\n",
-       "3                     4              11.0 2025-04-14 03:00:00\n",
-       "4                     5              12.0 2025-04-14 03:00:00\n",
-       "..                  ...               ...                 ...\n",
-       "260                 261              11.0 2025-04-14 03:00:00\n",
-       "261                 262              12.0 2025-04-14 03:00:00\n",
-       "262                 263              10.0 2025-04-14 03:00:00\n",
-       "263                 264              11.0 2025-04-14 03:00:00\n",
-       "264                 265              10.0 2025-04-14 03:00:00\n",
+       "     pickup_location_id  predicted_demand         pickup_hour      pickup_ts\n",
+       "0                     1              15.0 2025-04-18 04:00:00  1744948800000\n",
+       "1                     2              13.0 2025-04-18 04:00:00  1744948800000\n",
+       "2                     3              16.0 2025-04-18 04:00:00  1744948800000\n",
+       "3                     4              13.0 2025-04-18 04:00:00  1744948800000\n",
+       "4                     5              13.0 2025-04-18 04:00:00  1744948800000\n",
+       "..                  ...               ...                 ...            ...\n",
+       "260                 261              17.0 2025-04-18 04:00:00  1744948800000\n",
+       "261                 262              15.0 2025-04-18 04:00:00  1744948800000\n",
+       "262                 263              13.0 2025-04-18 04:00:00  1744948800000\n",
+       "263                 264              15.0 2025-04-18 04:00:00  1744948800000\n",
+       "264                 265              14.0 2025-04-18 04:00:00  1744948800000\n",
        "\n",
-       "[265 rows x 3 columns]"
+       "[265 rows x 4 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "predictions['pickup_hour'] = current_date\n",
+    "\n",
+    "# Add pickup_ts column for compatibility with the feature store\n",
+    "predictions['pickup_ts'] = predictions['pickup_hour'].astype(int) // 10**6\n",
     "predictions"
    ]
   },
@@ -293,38 +328,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2025-04-18 00:24:23,818 INFO: Closing external client and cleaning up certificates.\n",
+      "Connection closed.\n",
+      "2025-04-18 00:24:23,821 INFO: Initializing external client\n",
+      "2025-04-18 00:24:23,821 INFO: Base URL: https://c.app.hopsworks.ai:443\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "UserWarning: The installed hopsworks client version 4.1.5 may not be compatible with the connected Hopsworks backend version 4.2.0. \n",
+      "To ensure compatibility please install the latest bug fix release matching the minor version of your backend (4.2) by running 'pip install hopsworks==4.2.*'\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2025-04-18 00:24:24,377 INFO: Python Engine initialized.\n",
+      "\n",
+      "Logged in to project, explore it here https://c.app.hopsworks.ai:443/p/1211558\n"
+     ]
+    }
+   ],
    "source": [
     "from src.feature_store_api import get_feature_store\n",
     "import src.config as config\n",
     "\n",
     "# connect to the feature group\n",
     "feature_group = get_feature_store().get_or_create_feature_group(\n",
-    "    name=config.FEATURE_GROUP_MODEL_PREDICTIONS,\n",
+    "    name=\"model_predictions_feature_group\",\n",
     "    version=1,\n",
     "    description=\"Predictions generate by our production model\",\n",
-    "    primary_key = ['pickup_location_id', 'pickup_hour'],\n",
-    "    event_time='pickup_hour',\n",
+    "    primary_key = ['pickup_location_id', 'pickup_ts'],\n",
+    "    event_time=\"pickup_ts\",\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Feature Group created successfully, explore it at \n",
+      "https://c.app.hopsworks.ai:443/p/1211558/fs/1200206/fg/1434222\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Uploading Dataframe: 100.00% |██████████| Rows 265/265 | Elapsed Time: 00:00 | Remaining Time: 00:00\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Launching job: model_predictions_feature_group_1_offline_fg_materialization\n",
+      "Job started successfully, you can follow the progress at \n",
+      "https://c.app.hopsworks.ai:443/p/1211558/jobs/named/model_predictions_feature_group_1_offline_fg_materialization/executions\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(Job('model_predictions_feature_group_1_offline_fg_materialization', 'SPARK'),\n",
+       " None)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "feature_group.insert(predictions, write_options={\"wait_for_job\": False})"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
