Add pickup_ts column for compatibility with the feature store

--- a/notebooks/12_feature_pipeline.ipynb
+++ b/notebooks/12_feature_pipeline.ipynb
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -295,8 +295,8 @@
     "    name=config.FEATURE_GROUP_NAME,\n",
     "    version=config.FEATURE_GROUP_VERSION,\n",
     "    description=\"Time-series data at hourly frequency\",\n",
-    "    primary_key = ['pickup_location_id', 'pickup_hour'],\n",
-    "    event_time=\"pickup_hour\",\n",
+    "    primary_key = ['pickup_location_id', 'pickup_ts'],\n",
+    "    event_time=\"pickup_ts\",\n",
     ")\n",
     "feature_group"
    ]
